# lesfoil

./: .gitignore  LICENSE  README.md  plotter.py  pp.bash  pp.py  pyproject.toml  utilities.py
lesfoil/: __init__.py  plotter.py  pp.py  project.mplstyle  utilities.py
meshes/: convert.py  lesfoil-c.glf  v2_CO2_lesfoil.glf  v3_CO2_lesfoil.glf  v4_CO2_lesfoil.glf  v5_CO2_lesfoil.glf
refdata/: fig3a-CM1.csv  fig3a-CM2.csv  fig3a-CM3.csv  fig3a.tar  fig3b-CM1.csv  fig3b-CM2.csv  fig3b-CM3.csv  fig3b.tar  fig3c-CM1.csv  fig3c-CM2.csv  fig3c-CM3.csv  fig3c.tar  fig3d-CM1.csv  fig3d-CM2.csv  fig3d-CM3.csv  fig3d.tar  fig4a-CM1.csv  fig4a-CM2.csv  fig4a-CM3.csv  fig4a-exp.csv  fig4a-lesfoil.csv  fig4a.tar  fig4b-CM1.csv  fig4b-CM2.csv  fig4b-CM3.csv  fig4b-exp.csv  fig4b-lesfoil.csv  fig4b.tar  fig5a-CM3-0.csv  fig5a-CM3-1.csv  fig5a-CM3-2.csv  fig5a-CM3-3.csv  fig5a-CM3-4.csv  fig5a-exp-3.csv  fig5a-exp-4.csv  fig5a-lesfoil-0.csv  fig5a-lesfoil-1.csv  fig5a-lesfoil-2.csv  fig5a-lesfoil-3.csv  fig5a-lesfoil-4.csv  (+94 more)
sst/: lesfoil.yaml  submit.batch
sst-ams/: lesfoil.yaml  submit.batch
tests/: __init__.py  test_lesfoil.py
