[tool.poetry]
name = "lesfoil"
version = "0.1.0"
description = ""
authors = ["Marc Henry de Frahan <marc.henrydefrahan@nrel.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.1"
pandas = "^1.5.2"
matplotlib = "^3.6.3"
scipy = "^1.10.0"
PyYAML = "^6.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true, extras = ["jupyter"]}
isort = "^5.11.4"
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"
pep8-naming = "^0.13.3"
flake8-bugbear = "^23.1.14"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plot = "lesfoil.plotter:main"

[tool.black]
line-length = 79
target-version = ['py38']
preview-string-processing = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79